# loqui

./: README.md  infografia.html
Project/: CMakeLists.txt  Client.cpp  picosha2.h  server.cpp
